--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,7 @@ board = esp32dev
 framework = arduino
 
 monitor_speed = 115200
+upload_speed = 921600
 
 board_build.partitions = partitions_ota.csv
 board_build.flash_size = 4MB
@@ -12,4 +13,4 @@ lib_deps =
   knolleary/PubSubClient
 
 build_flags =
-  -D FW_VERSION=\"1.1.0\"
+  -D FW_VERSION=\"1.0.0\"
