--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,4 @@ board_build.flash_size = 4MB
 lib_deps =
   knolleary/PubSubClient
 
-build_flags =
-  -D FW_VERSION=\"1.0.0\"
+extra_scripts = pre:version.py
