--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@ board_build.flash_size = 4MB
 lib_deps =
   knolleary/PubSubClient
 
-extra_scripts = pre:version.py
+build_flags =
+    -D FW_VERSION=\"1.1.0\"
